[caelan-ui] fix line wrapping in TimeUntilBlock

--- a/webber-caelan-ui/src/components/App.css
+++ b/webber-caelan-ui/src/components/App.css
@@ -15,6 +15,7 @@ html {
   width: 1480px;
   height: 320px;
   overflow: hidden;
+  position: relative;
 }
 
 .cpu-heatmap {
